js/js.translator/testData/incremental/invalidation/privateObjectsLeakThroughSealedInterface/main/test.0.kt
fun test(): Int {
    val a = ClassA()
    val obj = a.leakedObject
    return obj.getNumber() + obj.extraNumber
}
